# parallel_programming

grayscale/: CMakeLists.txt  student_func.cu
